docs/v0.2.0a0/_sources/install/index.rst.txt

:orphan:

.. _install:

############
Installation
############

There are two methods to using HPCFlow: via a binary executable file or via a Python package. 
Both methods allow the design and execution of workflows. If you want to use HPCFlow on a 
cluster, using the binary executable file is recommended. If you want to design and explore
your workflows using the Python API, then you need the Python package. You can use both simultaneously if you wish!

********************************
Download binaries (v0.2.0a0)
********************************

Release notes: `on GitHub <https://github.com/hpcflow/hpcflow-new/releases/tag/v0.2.0a0>`_

Click below to download the HPCFlow binary for your platform (other binary releases are available by using the version switcher in the top-right corner):

.. raw:: html

   <table class="binary-downloads-table">
     <tr><td>Linux</td><td><a href="https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a0/hpcflow-v0.2.0a0-linux">hpcflow-v0.2.0a0-linux</a></td></tr>
     <tr><td>macOS</td><td><a href="https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a0/hpcflow-v0.2.0a0-macOS">hpcflow-v0.2.0a0-macOS</a></td></tr>
     <tr><td>Windows</td><td><a href="https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a0/hpcflow-v0.2.0a0-win.exe">hpcflow-v0.2.0a0-win.exe</a></td></tr>
   </table>

**************************
Install the Python package
**************************

Use pip to install the Python package from PyPI::

  pip install hpcflow==0.2.0a0

