docs/v0.2.0a18/_sources/install/index.rst.txt

:orphan:

.. _install:

############
Installation
############

There are two methods to using HPCFlow: via a binary executable file or via a Python package. 
Both methods allow the design and execution of workflows. If you want to use HPCFlow on a 
cluster, using the binary executable file is recommended. If you want to design and explore
your workflows using the Python API, then you need the Python package. You can use both simultaneously if you wish!

********************************
Download binaries (v0.2.0a18)
********************************

Release notes: `on GitHub <https://github.com/hpcflow/hpcflow-new/releases/tag/v0.2.0a18>`_

Binaries are available in two formats:

  * A single executable file containing everything.
  * A folder containing an executable and supporting files.

Click below to download the HPCFlow binary for your platform (other binary releases are available by using the version switcher in the top-right corner):

.. raw:: html

   <table class="binary-downloads-table">
     <tr><td>Linux executable</td><td><a href="https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a18/hpcflow-v0.2.0a18-linux">hpcflow-v0.2.0a18-linux</a></td></tr>
     <tr><td>Linux folder</td><td><a href="https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a18/hpcflow-v0.2.0a18-linux-dir.zip">hpcflow-v0.2.0a18-linux-dir.zip</a></td></tr>
     <tr><td>macOS executable</td><td><a href="https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a18/hpcflow-v0.2.0a18-macOS">hpcflow-v0.2.0a18-macOS</a></td></tr>
     <tr><td>macOS folder</td><td><a href="https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a18/hpcflow-v0.2.0a18-macOS-dir.zip">hpcflow-v0.2.0a18-macOS-dir.zip</a></td></tr>
     <tr><td>Windows folder</td><td><a href="https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a18/hpcflow-v0.2.0a18-win-dir.zip">hpcflow-v0.2.0a18-win-dir.zip</a></td></tr>
     <tr><td>Windows executable</td><td><a href="https://github.com/hpcflow/hpcflow-new/releases/download/v0.2.0a18/hpcflow-v0.2.0a18-win.exe">hpcflow-v0.2.0a18-win.exe</a></td></tr>
   </table>

**************************
Install the Python package
**************************

Use pip to install the Python package from PyPI::

  pip install hpcflow==0.2.0a18

